Add RAGdoll benchmark suite and related scripts
- Introduced BENCHMARK_SUMMARY.md to summarize benchmark results including retrieval quality, multi-hop performance, latency, throughput, and improvements over the vector baseline.
- Created run_benchmarks.ps1 to automate benchmark execution for various modes (Vector Baseline, RAGdoll Vector, PageRank, and Hybrid).
- Added test_hybrid_modes.ps1 for quick testing of all hybrid modes with a small subset.
- Implemented test_setup.py to verify benchmark setup, including imports, directory structure, API key, and dataset availability.
- Developed test_source_passage_fix.py to ensure graph retrieval returns source passages instead of entity descriptions.
- Added vector_baseline.py for benchmarking using Chroma and OpenAI embeddings.
- Removed outdated debug_chroma_embeddings.py and migrate_notebooks.py scripts.

--- a/.gitignore
+++ b/.gitignore
@@ -86,4 +86,10 @@ scripts/
 graph_output.json
 knowledge_graph.png
 
-*.ps1
+# Benchmark data and results (large files)
+benchmarks/datasets/*.json
+benchmarks/db/
+benchmarks/results/*.json
+
+# Keep PowerShell scripts except addCertsZscaler.ps1
+!benchmarks/*.ps1
