feat: enhance LLM integration with smoke tests and optimized defaults
- Add LLM smoke test in incremental_ingestion example for reliability
- Swap default to gpt-4o-mini for cost-efficiency, keep gpt-4o for quality
- Add request_timeout and max_retries to OpenAI models in config
- Improve LLM caller to handle chat models with HumanMessage wrapping
- Add logging to hybrid query for better observability

--- a/ragdoll/config/default_config.yaml
+++ b/ragdoll/config/default_config.yaml
@@ -231,13 +231,7 @@ llm_prompts:
 llms:
   default_model: gpt-4o-mini
   model_list:
-    - model_name: gpt-4o
-      provider: openai
-      params:
-        model: gpt-4o
-        api_key: "os.environ/OPENAI_API_KEY"
-        temperature: 0.0
-        max_tokens: 8192
+    # Fast/cheap OpenAI chat model
     - model_name: gpt-4o-mini
       provider: openai
       params:
@@ -245,6 +239,18 @@ llms:
         api_key: "os.environ/OPENAI_API_KEY"
         temperature: 0.0
         max_tokens: 4096
+        request_timeout: 30
+        max_retries: 2
+    # Higher-quality OpenAI model
+    - model_name: gpt-4o
+      provider: openai
+      params:
+        model: gpt-4o
+        api_key: "os.environ/OPENAI_API_KEY"
+        temperature: 0.0
+        max_tokens: 8192
+        request_timeout: 30
+        max_retries: 2
     - model_name: claude-3-5-sonnet
       provider: anthropic
       params:
